# stock-analysis

./: .env.example  .gitignore  README.md  build.sh  pyproject.toml  tf.sh
dtk/: pyproject.toml
dtk/common/: project_context.py
dtk/connectors/http/: connector.py
dtk/connectors/http/converters/: csv_response_to_arrow.py  json_reponse_to_arrow.py  json_response_to_dict.py
dtk/storage/: local.py
dtk_lib/: dtk  pyproject.toml  requirements.txt
dtk_lib/src/dtk_lib/common/: project_context.py
dtk_lib/src/dtk_lib/connectors/http/: connector.py  typing.py
dtk_lib/src/dtk_lib/connectors/http/converters/: json_reponse_to_arrow.py  json_response_to_dict.py
dtk_lib/src/dtk_lib/storage/: s3.py
dtk_lib/src/dtk_lib/utils/: common.py
fin/: application_context.py  main.py  pyproject.toml  requirements.txt
fin/sources/: alpha_vantage.py  alpha_vantage_api.py  eodhd.py  eodhd_api.py
src/: main.py
src/common/: project_context.py
src/connectors/: http.py
src/connectors/http/: connector.py  exceptions.py
src/connectors/http/converters/: csv_response_to_arrow.py  json_reponse_to_arrow.py
src/sources/: alpha_vantage.py  alpha_vantage_api.py  eodhd_api.py
src/storage/: local.py
src/utils/: common.py  logger.py  singleton.py
terraform/: main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
