[project]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander",email = "demichevaa@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "eodhd==1.0.32",
    "boto3==1.36.21",
    "pyarrow==19.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
start = "sh -c 'PYTHONPATH=src python main.py'"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

