[project]
name = "dtk"
version = "0.1.0"
description = "Data ToolKit library"
authors = [{name = "Alexander Demichev", email = "demichevaa@yahoo.com"}]
dependencies = [
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "boto3==1.36.21",
    "pyarrow==19.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
