[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtk-lib"
version = "0.1.0"
description = "A library for stock analysis with connectors and utilities."
authors = [{ name = "Your Name", email = "your@email.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "boto3",
]

#[tool.setuptools]
#packages = ["dtk"]
#package-dir = { "dtk" = "src/dtk_lib" }

#[tool.setuptools.packages.find]
#where = ["src"]
#include = ["dtk*"]
#
#[tool.setuptools.package-dir]
#dtk = "src/dtk_lib"

[tool.setuptools]
packages = ["dtk"]

[tool.setuptools.package-dir]
dtk = "src/dtk_lib"

#[tool.setuptools]
#package-dir = { "dtk" = "src/dtk_lib" }

#[tool.setuptools.packages.find]
#where = ["src"]

